src/objects/Component__c.object
<CustomObject>
    <description>Represents the behaviour definition for CG components that can be use in a community. For each lightning component available on the community builder, there is one component record type.</description>
    <fields>
        <fullName>AutomaticTransition__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina si los contenidos transicionan o no de forma automática.</description>
        <inlineHelpText>Determina si los contenidos transicionan o no de forma automática.</inlineHelpText>
        <label>Automatic transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerFrameType__c</fullName>
        <defaultValue>&quot;Hero&quot;</defaultValue>
        <description>This field allows users to define the banner rather a small, medium or large on the page added</description>
        <inlineHelpText>Para presentación horizontal | Hero banner , 3 , 1 | Page banner , 6 , 1 | Tiny banner , 1 , 1 |||||| Para presentación vertical | Hero banner , 1 , 3 | Page banner , 1 , 6 | Tiny banner , 1 , 1</inlineHelpText>
        <label>Banner Frame Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hero</fullName>
                    <default>true</default>
                    <label>Hero</label>
                </value>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BannerTransitionTime__c</fullName>
        <defaultValue>5000</defaultValue>
        <inlineHelpText>Time between content in milliseconds</inlineHelpText>
        <label>Banner transition time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BannerType__c</fullName>
        <description>Use this field to define the banner&apos;s behavior.</description>
        <label>Banner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Fade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClusterExternalId__c</fullName>
        <formula>Cluster__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <label>Datasource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ManualAssignment</fullName>
                    <label>Manual Assignment</label>
                </value>
                <value>
                    <fullName>Tags</fullName>
                </value>
                <value>
                    <fullName>Categories</fullName>
                </value>
                <value>
                    <fullName>TagsCategories</fullName>
                    <label>Tags + Categories</label>
                </value>
                <value>
                    <fullName>ParentComponentBehaviour</fullName>
                    <label>Parent Component Behaviour</label>
                </value>
                <value>
                    <fullName>ParentContentTags</fullName>
                    <label>Parent Content Tags</label>
                </value>
                <value>
                    <fullName>ParentContentCategories</fullName>
                    <label>Parent Content Categories</label>
                </value>
                <value>
                    <fullName>ParentContentTagsCategories</fullName>
                    <label>Parent Content Tags + Categories</label>
                </value>
                <value>
                    <fullName>All News</fullName>
                </value>
                <value>
                    <fullName>All Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelayTime__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Time delay in milliseconds.</description>
        <inlineHelpText>Time delay in milliseconds.</inlineHelpText>
        <label>Delay Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Use this field to set up on the component the direction that banner switch the content asociated</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                    <default>true</default>
                    <label>Right</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventsType__c</fullName>
        <label>Events Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludePastEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Past Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstCluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First Cluster to make a cluster Tree in cluster selector component</description>
        <label>First Cluster to show</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Components (First Cluster)</relationshipLabel>
        <relationshipName>Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasDelay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HierarchicalOrderBy__c</fullName>
        <label>Cluster Hierarchy Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <label>Root to Leaf</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                    <label>Leaf to Root</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link Detail</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina el comportamiento del banner como un bucle.</description>
        <inlineHelpText>Determina el comportamiento del banner como un bucle.</inlineHelpText>
        <label>Loop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>How will be showed the catalog component</description>
        <inlineHelpText>How will be showed the catalog component</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NavigationMode__c</fullName>
        <label>Navigation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal-Simple</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewsType__c</fullName>
        <label>News Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnlyClusterLeaf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, the user can only select clusters leaf</description>
        <inlineHelpText>if checked, the user can only select clusters leaf</inlineHelpText>
        <label>Only Leaf clusters are selectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderByAdvance__c</fullName>
        <label>Order by Advance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderBy__c</fullName>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CreatedDate ASC</fullName>
                    <default>true</default>
                    <label>Creation Date ASC</label>
                </value>
                <value>
                    <fullName>CreatedDate DESC</fullName>
                    <label>Creation Date DESC</label>
                </value>
                <value>
                    <fullName>Name ASC</fullName>
                </value>
                <value>
                    <fullName>Name DESC</fullName>
                </value>
                <value>
                    <fullName>Category__r.Name ASC</fullName>
                    <label>Category ASC</label>
                </value>
                <value>
                    <fullName>Category__r.Name DESC</fullName>
                    <label>Category DESC</label>
                </value>
                <value>
                    <fullName>PublishStartDate__c ASC</fullName>
                    <label>Publish Start Date ASC</label>
                </value>
                <value>
                    <fullName>PublishStartDate__c DESC</fullName>
                    <label>Publish Start Date DESC</label>
                </value>
                <value>
                    <fullName>EventStartDate__c ASC</fullName>
                    <label>Event Start Date ASC</label>
                </value>
                <value>
                    <fullName>EventStartDate__c DESC</fullName>
                    <label>Event Start Date DESC</label>
                </value>
                <value>
                    <fullName>ListTitle__c ASC</fullName>
                    <label>List Title ASC</label>
                </value>
                <value>
                    <fullName>ListTitle__c DESC</fullName>
                    <label>List Title DESC</label>
                </value>
                <value>
                    <fullName>Custom Sorting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <description>Defines the orientation the component is going to be presented</description>
        <inlineHelpText>Select the orientation for the component</inlineHelpText>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal-Landscape</fullName>
                    <default>true</default>
                    <label>Horizontal-Landscape</label>
                </value>
                <value>
                    <fullName>Vertical-Portrait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagingType__c</fullName>
        <label>Paging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Paging Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Path_status__c</fullName>
        <description>This picklist is used by the Path feature to guide the user on the task of populating a Component-Banner record</description>
        <label>Path status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Behavior</fullName>
                </value>
                <value>
                    <fullName>Content source</fullName>
                    <label>Source</label>
                </value>
                <value>
                    <fullName>Direct content assignment</fullName>
                    <label>Assignment</label>
                </value>
                <value>
                    <fullName>Sorting</fullName>
                </value>
                <value>
                    <fullName>External linking</fullName>
                    <label>Linking</label>
                </value>
                <value>
                    <fullName>Final check</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShowBullets__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina si se muestran los bullets en el banner.</description>
        <inlineHelpText>Determina si se muestran los bullets en el banner.</inlineHelpText>
        <label>Show Bullets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowDisplayMode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Display Mode on the catalog view</description>
        <inlineHelpText>Show Display Mode on the catalog view</inlineHelpText>
        <label>Show Display Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowFilters__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Filters on the catalog view</description>
        <inlineHelpText>Show Filters on the catalog view</inlineHelpText>
        <label>Show Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowImage__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Order on the catalog view</description>
        <inlineHelpText>Show Order on the catalog view</inlineHelpText>
        <label>Show Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowSearch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Search on the catalog view</description>
        <inlineHelpText>Show Search on the catalog view</inlineHelpText>
        <label>Show Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowTitle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusApprovalProcess__c</fullName>
        <label>Status approval process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusApprovalProcess</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                    <default>true</default>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Set Format</fullName>
                </value>
                <value>
                    <fullName>Set Content</fullName>
                </value>
                <value>
                    <fullName>Final Check</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Set Community</fullName>
                    <isActive>false</isActive>
                    <label>Set Community</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ComponentsDefaultView</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Lihue</value>
        </filters>
        <label>Components View Lihue</label>
    </listViews>
    <listViews>
        <fullName>Demo</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Demo</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Demo_1</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>demo 1</value>
        </filters>
        <label>Demo 1</label>
    </listViews>
    <listViews>
        <fullName>IRL_Discover</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>IRL - Discover Page Components</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IRL_Home</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>IRL - Home Page Components</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IRL_Shop</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>IRL - Shop Page Components</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>WMA_Components1</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Datasource__c</columns>
        <columns>ExternalId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>WMA</value>
        </filters>
        <label>WMA Components</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>AdvanceContent</fullName>
        <active>true</active>
        <description>Configure a new Advance Content component. Each Advance Content component act as a rich text who give you freedom to work for example with HTML code.</description>
        <label>Advance Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>Banner</fullName>
        <active>true</active>
        <description>Configure a new Banner component. Each banner component has a given aspect ratio and orientation for its presentation. It also has a given behavior for presenting its content such as carousel or appear-disappear effect.</description>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Catalog</fullName>
        <active>true</active>
        <description>Configure a new Catalog component. This component show Catalog information such as filters, mode, orderBy values, etc.</description>
        <label>Catalog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cluster_Selector</fullName>
        <active>true</active>
        <description>input Cluster External ID to load a cluster list</description>
        <label>Cluster Selector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Configure a new Event component. Each event will have related information such as event date, event place, event maximum allowance, etc.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>EventDetail</fullName>
        <active>true</active>
        <description>Configure a new Event Detail component. This component show event information such as event date, event place, event maximum allowance, etc.</description>
        <label>Events Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Configure a new FAQ component. A FAQ has one or more related pairs of question-answer which are listed in the order defined by the Content Admin</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Navigation</fullName>
        <active>true</active>
        <label>Navigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <description>Configure a new News component. Each News component acts as a placeholder for one or more News</description>
        <label>News</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewsDetail</fullName>
        <active>true</active>
        <description>Configure a new News Detail component. This component show News information such as Main image, Title, Description, etc.</description>
        <label>News Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>RelatedEvents</fullName>
        <active>true</active>
        <description>Configure a new Related Events component. Each Related Events component acts as a placeholder for one or more Related Events</description>
        <label>Related Events</label>
    </recordTypes>
    <recordTypes>
        <fullName>RelatedNews</fullName>
        <active>true</active>
        <description>Configure a new Related News component. Each Related News component acts as a placeholder for one or more Related News</description>
        <label>Related News</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OrderByAdvanceRequired</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISPICKVAL(OrderBy__c, &apos;Custom Sorting&apos;)
&amp;&amp;
ISBLANK(OrderByAdvance__c)
)</errorConditionFormula>
        <errorDisplayField>OrderByAdvance__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>